// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`文字排版 快照测试 基本文字排版 1`] = `
<p
  className="sc-bdVaJa cNIksg sinoui-typography sinoui-typography--caption"
  color="textPrimary"
  type="caption"
>
  Caption
</p>
`;

exports[`文字排版 快照测试 设置属性 1`] = `
Array [
  <h2
    className="sc-bdVaJa cNIksg sinoui-typography sinoui-typography--caption"
    color="textPrimary"
    type="caption"
  >
    Caption
  </h2>,
  <p
    className="sc-bdVaJa hLsCHh sinoui-typography sinoui-typography--caption"
    color="textPrimary"
    type="caption"
  >
    Caption
  </p>,
  <p
    className="sc-bdVaJa XfxHE sinoui-typography sinoui-typography--caption"
    color="textPrimary"
    type="caption"
  >
    Caption
  </p>,
  <p
    className="sc-bdVaJa bAxWdF sinoui-typography sinoui-typography--caption"
    color="success"
    type="caption"
  >
    Caption
  </p>,
]
`;

exports[`文字排版 快照测试 颜色设置 1`] = `
Array [
  <p
    className="sc-bdVaJa cNIksg sinoui-typography sinoui-typography--caption"
    color="textPrimary"
    type="caption"
  >
    Caption
  </p>,
  <p
    className="sc-bdVaJa yweNL sinoui-typography sinoui-typography--caption"
    color="primary"
    type="caption"
  >
    Caption
  </p>,
  <p
    className="sc-bdVaJa jCfcRO sinoui-typography sinoui-typography--caption"
    color="secondary"
    type="caption"
  >
    Caption
  </p>,
  <p
    className="sc-bdVaJa cNIksg sinoui-typography sinoui-typography--caption"
    color="textPrimary"
    type="caption"
  >
    Caption
  </p>,
  <p
    className="sc-bdVaJa dTXNpw sinoui-typography sinoui-typography--caption"
    color="textSecondary"
    type="caption"
  >
    Caption
  </p>,
  <p
    className="sc-bdVaJa fzcQrt sinoui-typography sinoui-typography--caption"
    color="error"
    type="caption"
  >
    Caption
  </p>,
  <p
    className="sc-bdVaJa eYwCFr sinoui-typography sinoui-typography--caption"
    color="warning"
    type="caption"
  >
    Caption
  </p>,
  <p
    className="sc-bdVaJa bAxWdF sinoui-typography sinoui-typography--caption"
    color="success"
    type="caption"
  >
    Caption
  </p>,
  <p
    className="sc-bdVaJa lcgRWp sinoui-typography sinoui-typography--caption"
    color="info"
    type="caption"
  >
    Caption
  </p>,
]
`;
